--- a/TicTacToe.tex
+++ b/TicTacToe.tex
@@ -22,7 +22,7 @@
 \hline
 
 %Indsæt dit træk her: 
-  &   &   \\ \hline
+x &   &   \\ \hline
   & X & O   \\ \hline
   &   &   \\ \hline
 \end{tabular}
