--- a/TicTacToe.tex
+++ b/TicTacToe.tex
@@ -22,9 +22,9 @@
 \hline
 
 %Indsæt dit træk her: 
-x &   &   \\ \hline
+X &   &   \\ \hline
   & X & O   \\ \hline
-  &   &   \\ \hline
+  &   & O   \\ \hline
 \end{tabular}
 
 \end{table}
