--- a/TicTacToe.tex
+++ b/TicTacToe.tex
@@ -22,7 +22,7 @@
 \hline
 
 %Indsæt dit træk her: 
-X &   &   \\ \hline
+X &   & X \\ \hline
   & X & O   \\ \hline
   &   & O   \\ \hline
 \end{tabular}
