--- a/TicTacToe.tex
+++ b/TicTacToe.tex
@@ -24,7 +24,7 @@
 %Indsæt dit træk her: 
 X &   & X \\ \hline
   & X & O   \\ \hline
-  &   & O   \\ \hline
+O  & O  & O   \\ \hline
 \end{tabular}
 
 \end{table}
